force-app/main/default/objects/External_Application__c/fields/Application_Name__c.field-meta.xml
<CustomField>
    <fullName>Application_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Application Name</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>