force-app/main/default/objects/External_Application__c/fields/Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>Callback_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Callback URL</label>
    <type>TextArea</type>
</CustomField>