force-app/main/default/objects/External_Application__c/fields/Consumer_secret__c.field-meta.xml
<CustomField>
    <fullName>Consumer_secret__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Consumer secret</label>
    <type>TextArea</type>
</CustomField>