force-app/main/default/objects/External_Application__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ID</label>
    <type>TextArea</type>
</CustomField>