force-app/main/default/objects/External_Application__c/fields/Instance_URL__c.field-meta.xml
<CustomField>
    <fullName>Instance_URL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Instance URL</label>
    <type>TextArea</type>
</CustomField>