force-app/main/default/objects/External_Application__c/fields/Outh_Code__c.field-meta.xml
<CustomField>
    <fullName>Outh_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Outh Code</label>
    <type>TextArea</type>
</CustomField>