force-app/main/default/objects/External_Application__c/fields/Refresh_Token__c.field-meta.xml
<CustomField>
    <fullName>Refresh_Token__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Refresh_Token</label>
    <type>TextArea</type>
</CustomField>