force-app/main/default/objects/External_Application__c/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Scope</label>
    <length>255</length>
    <type>Text</type>
</CustomField>