force-app/main/default/objects/External_Application__c/fields/Signature__c.field-meta.xml
<CustomField>
    <fullName>Signature__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Signature</label>
    <type>TextArea</type>
</CustomField>